# hlog

./: .gitignore  README.md  hlog.lnk  hlog.py  pyproject.toml  requirements.txt  todo
src/: Cursors.py  Database.py  Popup.py  QuickThread.py  ReadfileData.py
views/: FileTreeView.py  FilterTreeView.py  MPLView.py  MainView.py  SettingTreeView.py  SweepTreeView.py
widgets/: CustomQWidgets.py  FileTreeWidget.py  FilterTreeWidget.py  MPLElements.py  MPLToolbar.py  MPLTraceWidget.py  MPLWidget.py  PreviewWidget.py  SettingTreeWidget.py  SweepTreeWidget.py
