[project]
name = "hlog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.8",
    "pyhegel",
    "pyqt5>=5.15.11",
    "pyqtgraph==0.13.1",
    "pytz>=2025.2",
]

[tool.uv.sources]
pyhegel = { path = "../pyHegel" }
